Fix row gap and css styling

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,52 @@
 .header  {
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  justify-content: center;
   font-size: 48px;
   font-weight: 900;
+  display: flex;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 10px 32px;
+  margin: auto;
+  border: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
+  gap: 15px;
+  display: flex;
+  flex-direction: row;
   list-style-type: none;
 }
 
 a {
+  direction: ltr;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 20px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links{
+  display: flex;
+  align-content: flex-start;
+  flex-direction: row;
+}
+
+.right-links{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
 }
